# geneative-models

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  tox.ini
.github/workflows/: check_code_quality.yml  check_typing.yml  run_tests.yml
config/: config.yaml
config/data/: cifar10.yaml  mnist.yaml  shared.yaml
config/model/: shared.yaml
config/model/gans/: dcgan.yaml
generative/utils/: download_datasets.py  logger.py
src/generative/: __init__.py  train.py
src/generative/common/: __init__.py  activations.py  callbacks.py  constants.py  dataloaders.py  download_datasets.py  img_utils.py  losses.py  optimisers.py  registry.py
src/generative/config/: config.yaml
src/generative/config/data/: celeba_hq_256.yaml  shared.yaml
src/generative/config/model/: shared.yaml
src/generative/config/model/gans/: dcgan.yaml
src/generative/dev/: metaclass.py  metaclass_gan.py
src/generative/gans/: base_gan.py  dc_gan.py  wasserstein.py
src/generative/utils/: __init__.py  download_datasets.py
tests/: conftest.py
tests/generative/common/: test_dataloaders.py
tests/generative/gans/: test_dc_gan.py  test_wasserstein.py
