[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "template"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}

#dependencies = [
#]

requires-python = ">=3.10,<=3.12"

# [tool.setuptools.packages.find]
# where = ["src"]

[project.optional-dependencies]
typing = [
    "mypy==1.9.0",
    "pytest==8.1.1",
]
quality = [
    "pre-commit==3.7.0",
]
test = [
    "pytest==8.1.1"
]

# [project.scripts]
# tool = "template.cli.tool:main"

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
namespace_packages = true
python_version = "3.10"
strict = true
warn_unreachable = true
pretty = true
show_traceback = true
install_types = true
scripts_are_modules = true

[[tool.mypy.overrides]]
module = [
    "pytest",
]
allow_untyped_decorators = false

[tool.black]
color = true
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
include_trailing_comma = true
