[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "template"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}

#dependencies = [
#]

requires-python = ">=3.10,<3.13"

# [tool.setuptools.packages.find]
# where = ["src"]

[project.optional-dependencies]
typing = [
    "mypy==1.9.0",
    "pytest==8.1.1",
]
quality = [
    "pre-commit==3.7.0",
]
test = [
    "pytest==8.1.1"
]

# [project.scripts]
# tool = "template.cli.tool:main"
