[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "generative"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    "tensorflow>=2.16",
]

requires-python = ">=3.10,<3.13"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
typing = [
    "mypy==1.9.0",
    "pytest==8.1.1",
]
quality = [
    "pre-commit==3.7.0",
]
test = [
    "pytest==8.1.1"
]

[project.scripts]
download_datasets = "generative.utils.download_datasets:main"
